added util/TestFixtures.java to tests and added tests for getAllWorkoutPlans